fix build misc updates